--- a/src/db/config/config.json
+++ b/src/db/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "postgres",
-    "password": 41221778,
+    "password": "41221778",
     "database": "SVT_20220706",
     "host": "localhost",
     "dialect": "postgres",
@@ -9,7 +9,7 @@
   },
   "test": {
     "username": "postgres",
-    "password": 41221778,
+    "password": "41221778",
     "database": "SVT_20220706",
     "host": "localhost",
     "dialect": "postgres",
@@ -17,7 +17,7 @@
   },
   "production": {
     "username": "postgres",
-    "password": 41221778,
+    "password": "41221778",
     "database": "SVT_20220706",
     "host": "localhost",
     "dialect": "postgres",
