--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/ws": "^8.5.3",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
+    "dayjs": "^1.11.6",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
