--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "tsc && node dist/index.js",
     "build": "tsc",
     "dev": "nodemon src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write"
   },
   "author": "Federico Verges",
   "license": "ISC",
@@ -37,6 +38,7 @@
     "@types/morgan": "^1.9.3",
     "@types/node": "^18.0.3",
     "@types/validator": "^13.7.4",
+    "prettier": "^2.8.1",
     "sequelize-cli": "^6.4.1",
     "ts-node": "^10.8.2",
     "typescript": "^4.7.4"
