--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
+    "nodemon": "^2.0.20",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
     "reflect-metadata": "^0.1.13",
@@ -38,6 +39,7 @@
     "@types/morgan": "^1.9.3",
     "@types/node": "^18.0.3",
     "@types/validator": "^13.7.4",
+    "@types/web3": "^1.2.2",
     "prettier": "^2.8.1",
     "sequelize-cli": "^6.4.1",
     "ts-node": "^10.8.2",
