--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/jsonwebtoken": "^8.5.8",
+    "@types/pdfmake": "^0.2.2",
     "@types/ws": "^8.5.3",
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
@@ -25,6 +26,7 @@
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.20",
+    "pdfmake": "^0.2.7",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
     "reflect-metadata": "^0.1.13",
