--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write"
   },
-  "author": "Federico Verges",
+  "author": "Federico Agustín Verges",
   "license": "ISC",
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
