--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   "license": "ISC",
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/body-parser": "^1.19.2",
     "@types/crypto-js": "^4.1.1",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/pdfmake": "^0.2.2",
     "@types/ws": "^8.5.3",
     "bcrypt": "^5.0.1",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
     "dayjs": "^1.11.6",
