--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "tsc && node dist/index.js",
     "build": "tsc",
     "dev": "nodemon src/index.ts",
+    "dev-init-db": "INIT_DB=true nodemon src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prettier-format": "prettier --config .prettierrc 'src/**/*.ts' --write"
   },
