se agregan datos extra al docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,8 @@ services:
       PORT: 8080
       INIT_DB: false
       NETWORK_URL: https://sepolia.infura.io/v3/04be9cd572fa4376a643b4b78aaa7498
+      PRIVATE_KEY: 1c2c74609685e5d8b303e877afccd68ccf3e15d28a61cefb2d587b502d1c0264
+      CONTRACT_ADDRESS: '0x0F395C72d539b4a629a19E3b84A9c772c082d6DD'
     ports:
       - '8080:8080' #specify ports forewarding
       - '9090:9090' #specify ports forewarding
